# AXIOM

./: .gitignore  Cargo.toml  LICENSE  README.md  adversarial_sentences.txt  axiom_config.json  axiom_paper.docx  axiom_paper_core_idea.md  axiom_paper_corrected.md  axiom_paper_data.md  axiom_paper_extras.md  axiom_paper_outline.md  axiom_paper_package.md  axiom_prior_art.md  axiom_routing_report.md  axiom_weights.json  generate_paper_docx.py  patent_prior_art_search.md  prior_art_survey.md
autoresearch/: prepare.py  program.md  results.tsv  train.py
axiom-bench/: Cargo.toml
axiom-bench/src/: corpus.rs  dashboard.html  dashboard.rs  main.rs
axiom-core/: Cargo.toml
axiom-core/src/: lib.rs
axiom-core/src/cache/: embedding_cache.rs
axiom-core/src/graph/: edge.rs  engine.rs  mod.rs  node.rs
axiom-core/src/input/: encoder.rs  mod.rs
axiom-core/src/tiers/: mod.rs  resolver.rs  tier.rs
axiom-datasets/: complex.json  multi_paragraph_corpus.json  realistic.json  scenarios.json  simple.json
axiom-inference/: Cargo.toml
axiom-inference/src/: main.rs
axiom-llm/: Cargo.toml
axiom-llm/src/: lib.rs  router.rs
axiom-tuner/: Cargo.toml
axiom-tuner/src/: lib.rs  main.rs
data/: README.md  eval_set1_synthetic.json  eval_set2_adversarial.json  eval_set3_realworld.json  fusion_training_corpus.json  hard_negatives.json  sms_phishing_corpus.json
examples/bench/: corpus.rs  main.rs
examples/content-moderation/: README.md  main.rs
examples/fraud-detection/: README.md  main.rs
examples/llm-routing/: README.md  routerbench.rs
examples/query-triage/: README.md  main.rs
experiments/: run_experiment.sh  sweep.sh
experiments/results/phase16/: 01_baseline.txt  02_clause.txt  03_academic.txt  04_bidir.txt  05_clause_academic.txt  06_clause_bidir.txt  07_academic_bidir.txt  08_all_three.txt  09_all_twostage.txt  10_all_cosine.txt  11_all_phased.txt  12_all_200k.txt  13_bidir_phased.txt  200k_iter.txt  clr_001.txt  cosine_lr.txt  two_stage_calib.txt
scripts/: preprocess_routerbench.py
src/: classifier.rs  encoder.rs  features.rs  gpu.rs  graph.rs  lib.rs  main.rs  metrics.rs  optimiser.rs  resolver.rs  training.rs  transformer.rs  tuner.rs  types.rs  vocab.rs  weights.rs
src/bench/: corpus.rs  dashboard.rs
src/cache/: embedding_cache.rs  mod.rs
src/graph/: engine.rs  mod.rs  node.rs
src/input/: encoder.rs  tokeniser.rs
src/router/: mod.rs
src/semantic/: encoder.rs  mod.rs  train.rs  transformer.rs  vocab.rs
src/sms/: features.rs  mod.rs
src/tiers/: feedback.rs  mod.rs  resolver.rs  tier.rs
