[package]
name = "axiom"
version = "1.0.0"
edition = "2021"
description = "AXIOM — Adaptive eXecution with Intelligent Operations Memory. Sparse dynamic routing for cost-efficient LLM inference."
license = "MIT"
repository = "https://github.com/olliverc1985/AXIOM"
keywords = ["llm", "routing", "sparse-computation", "machine-learning", "inference"]
categories = ["science", "algorithms"]

[features]
default = []
gpu = ["metal"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
indicatif = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[lib]
name = "axiom"
path = "src/lib.rs"

[[bin]]
name = "train_axiom"
path = "src/bin/train_axiom.rs"

[[bin]]
name = "eval_axiom"
path = "src/bin/eval_axiom.rs"

[[bin]]
name = "axiom-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "routerbench_eval"
path = "src/bin/routerbench_eval.rs"
