[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
description = "Lightweight Rust ML framework for training and deploying small transformer classifiers. Zero ML dependencies. 90us inference."
license = "MIT"
repository = "https://github.com/olliverc1985/AXIOM"
keywords = ["machine-learning", "transformer", "classifier", "text-classification", "inference"]
categories = ["science", "algorithms"]

[features]
default = []
gpu = ["metal"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
indicatif = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[lib]
name = "axiom"
path = "src/lib.rs"

# ── LLM Routing examples ────────────────────────────────────────────

[[example]]
name = "train-axiom"
path = "examples/llm-routing/train.rs"

[[example]]
name = "eval-axiom"
path = "examples/llm-routing/eval.rs"

[[example]]
name = "routerbench-eval"
path = "examples/llm-routing/routerbench.rs"

# ── Graph architecture benchmark ────────────────────────────────────

[[example]]
name = "axiom-bench"
path = "examples/bench/main.rs"

# ── Skeleton examples ───────────────────────────────────────────────

[[example]]
name = "fraud-detection"
path = "examples/fraud-detection/main.rs"

[[example]]
name = "content-moderation"
path = "examples/content-moderation/main.rs"

[[example]]
name = "query-triage"
path = "examples/query-triage/main.rs"
