[package]
name = "axiom-bench"
version = "0.1.0"
edition = "2021"
description = "AXIOM bench — synthetic benchmark loop with live dashboard"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-tuner = { path = "../axiom-tuner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
