[package]
name = "axiom-core"
version = "0.1.0"
edition = "2021"
description = "AXIOM core — sparse computation graph, embedding cache, and hierarchical reasoning tiers"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
