[package]
name = "axiom-llm"
version = "0.1.0"
edition = "2021"
description = "AXIOM LLM integration — route queries to Anthropic models based on AXIOM tier decisions"

[[bin]]
name = "axiom_route"
path = "src/bin/axiom_route.rs"

[[bin]]
name = "axiom_report"
path = "src/bin/axiom_report.rs"

[[bin]]
name = "axiom_agg_experiment"
path = "src/bin/axiom_agg_experiment.rs"

[dependencies]
axiom-core = { path = "../axiom-core" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
