[package]
name = "axiom-tuner"
version = "0.1.0"
edition = "2021"
description = "AXIOM auto-tuner — reads bench logs, adjusts confidence thresholds and cache parameters"

[dependencies]
axiom-core = { path = "../axiom-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "axiom_tuner"
path = "src/lib.rs"

[[bin]]
name = "axiom-tuner"
path = "src/main.rs"
